--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -29,7 +29,7 @@
 .navbar-brand img {
   margin-right: 10px;
   padding: 4px;
-  border: 2px dotted #218838;
+  border: 2px dotted #28a745;
   border-radius: 50%;
 }
 
