--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -29,7 +29,7 @@
 .navbar-brand img {
   margin-right: 10px;
   padding: 4px;
-  border: 2px dotted #28a745;
+  border: 2px dotted #00B98E;
   border-radius: 50%;
 }
 
@@ -75,7 +75,7 @@
 }
 
 .add-property-btn {
-  background-color: #28a745;
+  background-color: #00B98E;
   color: white;
   padding: 10px 20px;
   border: none;
